# EgzaminoUzd

./: .gitignore  CMakeLists.txt  EgzaminoUzd.cpp  EgzaminoUzd.vcxproj  README.md  RELEASE_NOTES.md  cross_reference.txt  tekstas.txt  url_adresai.txt  zodziu_pasikartojimai.txt
